# lis2dtw12-rs

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  ci.yml
examples/: stm32l431-embassy-async.rs
examples/stm32l4-embassy-async/: Cargo.toml  memory.x
examples/stm32l4-embassy-async/src/: main.rs  read_data.rs  tap_detection.rs
src/: i2c.rs  interface.rs  lib.rs  register_data.rs  register_settings.rs  registers.rs  spi.rs
