[package]
name = "lis2dtw12"
version = "0.1.3"
authors = ["Janek Graff <janek.graff@posteo.net>"]
repository = "https://github.com/JanekGraff/lis2dtw12-rs"
license = "Apache-2.0 OR MIT"
description = "no_std library for the LIS2DTW12 dual motion and temperature sensor using embedded-hal traits"
readme = "README.md"
keywords = ["embedded-hal", "no_std", "accelerometer", "sync", "async"]
categories = [
    "embedded",
    "no-std",
    "hardware-support",
    "asynchronous",
    "no-std::no-alloc",
]
edition = "2021"

exclude = [".github", "memory.x", ".cargo", "rust-toolchain.toml"]

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
maybe-async-cfg = "0.2.5"

log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
nb = "1.1.0"

# Embassy asnyc
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47", features = [
    "tick-hz-32_768",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47", features = [
    "unstable-pac",
    "memory-x",
    "exti",
    "chrono",
    "stm32l431vc",
    "time-driver-tim15",
] }

panic-probe = { version = "0.3.2", features = ["print-defmt"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"

[features]
default = ["blocking", "log"]
blocking = []
async = ["dep:embedded-hal-async"]
log = ["dep:log"]
defmt = ["dep:defmt"]

[profile.release]
lto = true

[[example]]
name = "stm32l431-embassy-async"
required-features = ["async"]
