[package]
name = "lis2dtw12"
version = "0.2.0"
authors = ["Janek Graff <janek.graff@posteo.net>"]
repository = "https://github.com/JanekGraff/lis2dtw12-rs"
license = "Apache-2.0 OR MIT"
description = "no_std library for the LIS2DTW12 dual motion and temperature sensor using embedded-hal traits"
readme = "README.md"
keywords = ["embedded-hal", "no_std", "accelerometer", "sync", "async"]
categories = [
    "embedded",
    "no-std",
    "hardware-support",
    "asynchronous",
    "no-std::no-alloc",
]
edition = "2021"

exclude = [".github", "memory.x", ".cargo", "rust-toolchain.toml"]

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
maybe-async-cfg = "0.2.5"

log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[features]
default = ["blocking", "log"]
blocking = []
async = ["dep:embedded-hal-async"]
log = ["dep:log"]
defmt = ["dep:defmt"]
